# rinha-backend-2025

./: .dockerignore  .gitignore  README.md  compose.yml  main.py  partial-results.json  pyproject.toml  requirements.txt  run.sh
docker/: Dockerfile
docker/server/: Dockerfile
docker/worker/: Dockerfile
nginx/: nginx.conf
payment-processor/: docker-compose.yml
rinha-test/: rinha.js
src/: async_queue.py  broker.py  connections.py  health_check.py  server.py  setup.py  types.py  worker.py  worker_pool.py
src/async_queue/: worker_pool.py
src/entrypoints/: health_check.py  server.py  worker.py
src/gateways/: health_check.py  processor_health.py  redis.py  requests.py
src/models/: payment.py  processor.py
src/services/: endpoint_health.py  payment.py  payment_service.py  process_payment.py  summary.py
src/utils/: types.py
