[project]
name = "rinha-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "dramatiq[redis,watch]>=1.18.0",
    "httpx>=0.28.1",
    "redis[hiredis]>=6.2.0",
]

[tool.pyright]
include = ["src/"]
typeCheckingMode = "standard"

[dependency-groups]
server = [
    "fastapi>=0.116.1",
    "granian>=2.5.0",
]
